# geocodio_lib_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: errors.rs  lib.rs  response.rs  utils.rs
src/json/: address.rs  mod.rs  utils.rs
src/request/: address.rs  fetch.rs  mod.rs  utils.rs
src/response/: address.rs  congressional.rs  mod.rs  utils.rs
